# rustc-crash

./: Cargo.toml
.github/workflows/: rust.yml
boi/: Cargo.toml
boi/src/: lib.rs
proc-boi/: Cargo.toml
proc-boi/src/: lib.rs
